update dokumentasi authentication
